trigger gulp via cli

--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "qml-reaload",
+  "name": "sailfish-reload",
   "version": "0.0.1",
   "description": "Auto synces source changes to Jolla or Emulator",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "main": "gulpfile.js",
   "author": "Andrin Bertschi",
   "license": "MIT",
   "dependencies": {
