--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "interpret": "^0.5.1",
     "liftoff": "^2.0.2",
     "minimist": "^1.1.0",
+    "pretty-hrtime": "^1.0.0",
     "shelljs": "^0.3.0",
     "v8flags": "^2.0.2"
   }
