--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "findup": "^0.1.5",
     "findup-sync": "^0.2.1",
     "gulp": "^3.8.11",
+    "gulp-notify": "^2.2.0",
     "gulp-prompt": "^0.1.2",
     "gulp-shell": "^0.3.0",
     "gulp-ssh": "^0.3.3",
@@ -20,5 +21,9 @@
     "pretty-hrtime": "^1.0.0",
     "shelljs": "^0.3.0",
     "v8flags": "^2.0.2"
+  },
+
+  "bin": {
+    "sailfish-reload": "./bin/sailfish-reload"
   }
 }
