--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-util": "^3.0.4",
     "gulp-wait": "0.0.2",
     "interpret": "^0.5.1",
+    "keymirror": "^0.1.1",
     "liftoff": "^2.0.2",
     "minimist": "^1.1.0",
     "pretty-hrtime": "^1.0.0",
