--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sailfish-reload",
   "version": "0.0.1",
   "description": "Auto update source changes and sync them to the Sailfish Emulator or the Jolla Phone.",
-  "main": "gulpfile.js",
+  "main": "src/gulpfile.js",
   "author": "Andrin Bertschi",
   "license": "MIT",
   "dependencies": {
