--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "keymirror": "^0.1.1",
     "liftoff": "^2.0.2",
     "minimist": "^1.1.0",
+    "mkdirp": "^0.5.1",
     "pretty-hrtime": "^1.0.0",
+    "randomstring": "^1.0.5",
     "shelljs": "^0.3.0",
+    "string-format": "^0.5.0",
+    "temp": "^0.8.1",
     "v8flags": "^2.0.2"
   },
   "bin": {
