ready for release 0.1.0-rc-1

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sailfish-reload",
-  "version": "0.1.0",
+  "version": "0.1.0-rc-1",
   "description": "Auto update source changes and sync them to the a target device like the Sailfish Emulator or the Jolla Phone.",
   "main": "src/gulpfile.js",
   "author": "Andrin Bertschi",
@@ -28,7 +28,7 @@
     "gulp-print": "^1.1.0",
     "gulp-prompt": "^0.1.2",
     "gulp-shell": "^0.3.0",
-    "gulp-ssh": "https://github.com/abertschi/gulp-ssh/archive/v0.4.0-bean-npm-rel.tar.gz",
+    "gulp-ssh": "https://github.com/abertschi/gulp-ssh/archive/v0.4.0-bean-npm-rel-2.tar.gz",
     "gulp-util": "^3.0.4",
     "gulp-wait": "0.0.2",
     "interpret": "^0.5.1",
