--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sailfish-reload",
   "version": "0.1.0-rc-1",
-  "description": "Auto update source changes and sync them to the a target device like the Sailfish Emulator or the Jolla Phone.",
+  "description": "Auto update source changes and sync them to a target device like the Sailfish Emulator or the Jolla Phone.",
   "main": "src/gulpfile.js",
   "author": "Andrin Bertschi",
   "license": "MIT",
